src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import "./styles/_base.scss";

html {
  body {
    width: 100%;
    height: 100%;
    background: url("./assets/images/embedded/background.png") no-repeat;
    background-size: cover;
    margin: 0;
  }
  background: $color-bg;
  font-family: RalewayRegular, SansSerif, sans-serif;
  a:any-link,
  a:-webkit-any-link {
    color: $blue;
  }
  p {
    text-align: justify;
    width: 80%
  }
}

